# experiment-catalog

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile.harness  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  catalog.Dockerfile  exp-catalog.code-workspace  experiment-catalog.sln  experimentation-process.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  branch-protection.ruleset.json  dependabot.yml
actions/: README.md
catalog/: Program.cs  README.md  auth.md  catalog.http  exp-catalog.csproj
catalog.tests/: ConfigTests.cs  McpValidationHelperTests.cs  ValidNameAttributeTests.cs  ValidNamesAttributeTests.cs  catalog.tests.csproj
demo-experiments/: .gitignore  Build-McpApps.ps1  README.md
docs/: ARCHITECTURE.md  DEMO.md  DEPENDENCY_GOVERNANCE.md  DESIGN.md  DESIGN_PHILOSOPHY-FOUNDRY_VS_AML.md  EXPERIMENT-IDEAS.md  MAINTAINERS.md  OBSERVABILITY.md  REQUIREMENTS.md  SECURITY-PLAN.md  TRIAGE.md  aml.drawio
inference/: README.md
inference/foundryv2agent/: README.md  agent.py  get_agents.py  gt_test.json  inference.py  isedevblogquestions.csv  main.py  prompt.txt  pyproject.toml  remove_agents_by_prefix.py  run_app.py  run_batch.py  run_web.py
inference/foundryv2agent/Models/: __init__.py  chat_session.py  config.py  event_bus.py  ground_truth.py
inference/foundryv2agent/Search/: __init__.py  search_service.py
inference/foundryv2agent/Services/: __init__.py  chat.py  chat_service.py
infra/: README.md  SetupEnv.ps1  main.bicep
ingestion/: sync-blogs-to-storage.ps1
(+178 files in other folders)
