[project]
name = "pyagent"
version = "0.3.0"
description = "Azure AI Foundry Agent for CSE DevBlogs using Azure AI Search - Azure AI Projects v2 SDK with Function Calling"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=2.0.0b3",  # Azure AI Projects v2 SDK (--pre required)
    "azure-identity>=1.21.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.13.3",
    "azure-search-documents>=11.6.0b8",  # For direct Azure Search access in function calling
    #"azure-storage-blob>=12.19.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
prerelease = "allow"
